--- a/index.html
+++ b/index.html
@@ -4,34 +4,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CommitWise AI - Professional Git Messages</title>
+    <title>Vercel Ship-Check | Deployment Success</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Fira+Code:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Fira+Code&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #0f172a;
-            color: #f1f5f9;
-        }
-        .mono {
-            font-family: 'Fira Code', monospace;
-        }
+        body { font-family: 'Inter', sans-serif; background-color: #020617; }
+        .mono { font-family: 'Fira Code', monospace; }
+        .glass { background: rgba(15, 23, 42, 0.6); backdrop-filter: blur(12px); border: 1px solid rgba(51, 65, 85, 0.5); }
+        .glow { box-shadow: 0 0 20px rgba(79, 70, 229, 0.2); }
     </style>
     <script type="importmap">
-    {
-      "imports": {
-        "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-        "@google/genai": "https://esm.sh/@google/genai@^1.40.0",
-        "react/": "https://esm.sh/react@^19.2.4/",
-        "react": "https://esm.sh/react@^19.2.4"
-      }
-    }
-    </script>
+{
+  "imports": {
+    "@google/genai": "https://esm.sh/@google/genai@^1.40.0",
+    "react": "https://esm.sh/react@^19.2.4",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/"
+  }
+}
+</script>
 </head>
-<body>
-    <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+<body class="text-slate-200 min-h-screen flex flex-col">
+    <div id="app" class="flex-grow flex flex-col items-center justify-center p-6">
+        <!-- Status Header -->
+        <div class="w-full max-w-2xl mb-8 flex justify-between items-center">
+            <div class="flex items-center gap-3">
+                <div class="w-10 h-10 bg-indigo-600 rounded-xl flex items-center justify-center glow">
+                    <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/></svg>
+                </div>
+                <div>
+                    <h1 class="text-xl font-bold text-white leading-none">Ship-Check</h1>
+                    <p class="text-xs text-slate-500 mt-1">Deployment Validator</p>
+                </div>
+            </div>
+            <div id="env-badge" class="px-3 py-1 rounded-full text-[10px] font-bold uppercase tracking-widest border border-slate-700 text-slate-400">
+                Detecting...
+            </div>
+        </div>
+
+        <!-- Main Card -->
+        <main class="w-full max-w-2xl glass rounded-3xl p-8 sm:p-12 shadow-2xl space-y-8">
+            <section class="space-y-4 text-center sm:text-left">
+                <h2 class="text-3xl font-extrabold text-white tracking-tight">Deployment Successful</h2>
+                <p class="text-slate-400 leading-relaxed">
+                    This static page confirms that your **GitHub repository** is successfully synced with **Vercel**. 
+                    The module system is initialized and ready for production.
+                </p>
+            </section>
+
+            <!-- API Status Check -->
+            <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+                <div class="bg-slate-900/50 rounded-2xl p-5 border border-slate-800">
+                    <p class="text-xs font-semibold text-slate-500 uppercase mb-2">Environment Variable</p>
+                    <div class="flex items-center gap-2">
+                        <div id="key-dot" class="w-2 h-2 rounded-full bg-slate-700"></div>
+                        <span id="key-status" class="text-sm font-medium text-slate-300">Checking API_KEY...</span>
+                    </div>
+                </div>
+                <div class="bg-slate-900/50 rounded-2xl p-5 border border-slate-800">
+                    <p class="text-xs font-semibold text-slate-500 uppercase mb-2">Build Strategy</p>
+                    <div class="flex items-center gap-2">
+                        <div class="w-2 h-2 rounded-full bg-emerald-500"></div>
+                        <span class="text-sm font-medium text-slate-300">Zero-Build Static</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Interaction -->
+            <div class="pt-4">
+                <button id="verify-btn" class="w-full bg-white text-slate-950 font-bold py-4 rounded-2xl hover:bg-indigo-50 transition-all flex items-center justify-center gap-3 active:scale-[0.98]">
+                    <span id="btn-text">Test Gemini Connection</span>
+                    <div id="loader" class="hidden w-5 h-5 border-2 border-slate-950 border-t-transparent rounded-full animate-spin"></div>
+                </button>
+                <div id="result-box" class="hidden mt-6 bg-indigo-500/10 border border-indigo-500/20 rounded-2xl p-6 animate-in fade-in slide-in-from-top-4 duration-500">
+                    <p class="text-xs font-bold text-indigo-400 uppercase mb-3 tracking-widest">Gemini Response</p>
+                    <p id="result-text" class="text-slate-300 text-sm leading-relaxed italic"></p>
+                </div>
+            </div>
+        </main>
+
+        <!-- Footer Info -->
+        <footer class="mt-12 text-slate-600 text-[11px] uppercase tracking-widest flex items-center gap-6">
+            <a href="https://vercel.com" class="hover:text-white transition-colors">Vercel Docs</a>
+            <div class="w-1 h-1 bg-slate-800 rounded-full"></div>
+            <a href="https://github.com" class="hover:text-white transition-colors">GitHub Repo</a>
+            <div class="w-1 h-1 bg-slate-800 rounded-full"></div>
+            <span>v1.0.0-static</span>
+        </footer>
+    </div>
+
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
